--- a/Resources/Storyboards/MainStoryboard.storyboard
+++ b/Resources/Storyboards/MainStoryboard.storyboard
@@ -1137,10 +1137,10 @@
             </objects>
             <point key="canvasLocation" x="-1399" y="3356"/>
         </scene>
-        <!--Table View Controller-->
+        <!--Conference Room View Controller-->
         <scene sceneID="1AB-KK-eGX">
             <objects>
-                <tableViewController id="ut0-YE-hjt" sceneMemberID="viewController">
+                <tableViewController id="ut0-YE-hjt" customClass="XBConferenceRoomViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="3fG-kg-be5">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
