Fixed home download and added track view controller

--- a/Resources/Storyboards/MainStoryboard.storyboard
+++ b/Resources/Storyboards/MainStoryboard.storyboard
@@ -1195,10 +1195,10 @@
             </objects>
             <point key="canvasLocation" x="-1399" y="3951"/>
         </scene>
-        <!--Table View Controller-->
+        <!--Conference Track View Controller-->
         <scene sceneID="5wh-Cc-3Oy">
             <objects>
-                <tableViewController id="CkC-20-mdW" sceneMemberID="viewController">
+                <tableViewController id="CkC-20-mdW" customClass="XBConferenceTrackViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="wHO-uO-JNq">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
