--- a/Classes/View/Conferences/Presentations/XBConferencePresentationCell.xib
+++ b/Classes/View/Conferences/Presentations/XBConferencePresentationCell.xib
@@ -7,11 +7,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="XBConferencePresentationCell" rowHeight="44" id="aCa-a0-1qD" customClass="XBConferencePresentationCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="XBConferencePresentationCell" rowHeight="67" id="aCa-a0-1qD" customClass="XBConferencePresentationCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="67"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="aCa-a0-1qD" id="FWd-fx-AhH">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="66"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="jVA-Ts-hyk">
@@ -21,14 +21,25 @@
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="eQY-uB-P2p">
+                        <rect key="frame" x="20" y="34" width="280" height="14"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstItem="jVA-Ts-hyk" firstAttribute="leading" secondItem="FWd-fx-AhH" secondAttribute="leading" constant="20" id="0Vb-Wj-lV5"/>
                     <constraint firstAttribute="trailing" secondItem="jVA-Ts-hyk" secondAttribute="trailing" constant="20" id="VkD-KG-oEG"/>
                     <constraint firstItem="jVA-Ts-hyk" firstAttribute="top" secondItem="FWd-fx-AhH" secondAttribute="top" constant="11" id="ks3-IM-maV"/>
+                    <constraint firstItem="eQY-uB-P2p" firstAttribute="top" secondItem="jVA-Ts-hyk" secondAttribute="bottom" constant="4" id="sNv-Wf-AcW"/>
+                    <constraint firstAttribute="trailing" secondItem="eQY-uB-P2p" secondAttribute="trailing" constant="20" id="sWn-fl-BGG"/>
+                    <constraint firstItem="eQY-uB-P2p" firstAttribute="leading" secondItem="FWd-fx-AhH" secondAttribute="leading" constant="20" id="sja-hh-8Ux"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
+                <outlet property="speakerLabel" destination="eQY-uB-P2p" id="73F-I4-fy2"/>
                 <outlet property="titleLabel" destination="jVA-Ts-hyk" id="Cba-q3-FZR"/>
             </connections>
         </tableViewCell>
