--- a/Resources/Storyboards/MainStoryboard.storyboard
+++ b/Resources/Storyboards/MainStoryboard.storyboard
@@ -1057,7 +1057,7 @@
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qMB-wb-Xd0">
-                                    <rect key="frame" x="92" y="8" width="136" height="136"/>
+                                    <rect key="frame" x="92" y="15" width="136" height="136"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="136" id="108-2f-IYH"/>
@@ -1065,26 +1065,25 @@
                                     </constraints>
                                 </imageView>
                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="90i-25-xwE">
-                                    <rect key="frame" x="20" y="159" width="280" height="17"/>
+                                    <rect key="frame" x="20" y="161" width="280" height="21"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
-                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
+                                    <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="q0X-Hs-rgS">
-                                    <rect key="frame" x="142" y="57" width="37" height="37"/>
+                                    <rect key="frame" x="142" y="64" width="37" height="37"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 </activityIndicatorView>
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                             <constraints>
                                 <constraint firstItem="qMB-wb-Xd0" firstAttribute="centerY" secondItem="q0X-Hs-rgS" secondAttribute="centerY" id="14K-tr-D4O"/>
-                                <constraint firstItem="90i-25-xwE" firstAttribute="top" secondItem="qMB-wb-Xd0" secondAttribute="bottom" constant="15" id="2ft-Hx-XR2"/>
-                                <constraint firstItem="qMB-wb-Xd0" firstAttribute="top" secondItem="ukN-CU-nBW" secondAttribute="top" constant="8" id="6Wh-cn-zk4"/>
+                                <constraint firstItem="90i-25-xwE" firstAttribute="top" secondItem="qMB-wb-Xd0" secondAttribute="bottom" constant="10" id="2ft-Hx-XR2"/>
+                                <constraint firstItem="qMB-wb-Xd0" firstAttribute="top" secondItem="ukN-CU-nBW" secondAttribute="top" constant="15" id="6Wh-cn-zk4"/>
                                 <constraint firstAttribute="centerX" secondItem="90i-25-xwE" secondAttribute="centerX" id="KZG-YI-Q4K"/>
                                 <constraint firstAttribute="centerX" secondItem="qMB-wb-Xd0" secondAttribute="centerX" id="Ld8-T7-NSZ"/>
                                 <constraint firstAttribute="trailing" secondItem="90i-25-xwE" secondAttribute="trailing" constant="20" id="OE9-Yw-Dlc"/>
-                                <constraint firstAttribute="bottom" secondItem="90i-25-xwE" secondAttribute="bottom" constant="16" id="aHh-Tq-0JK"/>
                                 <constraint firstItem="qMB-wb-Xd0" firstAttribute="centerX" secondItem="q0X-Hs-rgS" secondAttribute="centerX" id="elu-8A-sOh"/>
                                 <constraint firstItem="90i-25-xwE" firstAttribute="leading" secondItem="ukN-CU-nBW" secondAttribute="leading" constant="20" id="ggE-5v-8Mf"/>
                             </constraints>
@@ -1101,6 +1100,7 @@
                         <segue destination="IV7-Ho-xnZ" kind="push" identifier="ShowSpeakers" id="mCF-SF-2Ga"/>
                         <segue destination="ut0-YE-hjt" kind="push" identifier="ShowRooms" id="h8d-E3-fcc"/>
                         <segue destination="CkC-20-mdW" kind="push" identifier="ShowTracks" id="uQ9-aF-93G"/>
+                        <segue destination="XfO-fg-dRA" kind="push" identifier="ShowDay" id="AH2-ZS-Gjw"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ETK-u0-0Eg" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1129,12 +1129,14 @@
                                     <rect key="frame" x="20" y="229" width="280" height="17"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
+                                    <color key="textColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.23529411759999999" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lV5-8W-gbZ">
                                     <rect key="frame" x="20" y="172" width="280" height="24"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="20"/>
+                                    <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hC7-8T-oss">
@@ -1258,6 +1260,56 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dM4-jj-Itt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-580" y="3946"/>
+        </scene>
+        <!--Conference Day View Controller-->
+        <scene sceneID="1vS-cX-R7A">
+            <objects>
+                <tableViewController id="XfO-fg-dRA" customClass="XBConferenceDayViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="EGh-Bg-zbO" customClass="XBTableView">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <view key="tableHeaderView" contentMode="scaleToFill" id="S33-yx-Ehc">
+                            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pv0-6V-HIE">
+                                    <rect key="frame" x="10" y="11" width="42" height="21"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <color key="textColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.23529411759999999" alpha="1" colorSpace="calibratedRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstItem="pv0-6V-HIE" firstAttribute="leading" secondItem="S33-yx-Ehc" secondAttribute="leading" constant="10" id="rm3-a0-bU1"/>
+                                <constraint firstItem="pv0-6V-HIE" firstAttribute="top" secondItem="S33-yx-Ehc" secondAttribute="top" constant="11" id="wJk-Hb-mjl"/>
+                            </constraints>
+                        </view>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="RvD-Zj-wsa">
+                                <rect key="frame" x="0.0" y="66" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="RvD-Zj-wsa" id="A27-FQ-g5Z">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="XfO-fg-dRA" id="vHP-a3-vke"/>
+                            <outlet property="delegate" destination="XfO-fg-dRA" id="ph7-Ox-8HL"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="RNO-1G-9wV"/>
+                    <connections>
+                        <outlet property="dayLabel" destination="pv0-6V-HIE" id="oOu-i7-tpK"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KEP-aX-fHD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1399" y="4548"/>
         </scene>
         <!--Conference Track View Controller-->
         <scene sceneID="5wh-Cc-3Oy">
